Trailing ideographic space (U+3000) should hang at end-of-line
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
People
(Reporter: jfkthame, Assigned: jfkthame)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
Testcase: http://wpt.live/css/css-text/white-space/trailing-ideographic-space-001.html
This fails because we do not treat the ideographic space as hanging at the end of the first line; therefore it contributes its width to its parent <div>, and the red background becomes visible.
A couple of other WPT tests currently fail similarly.
Assignee | ||
Comment 1•1 year ago
|
||
In addition to the width behavior that these tests are actually about,
we get a spurious rendering discrepancy at least on Linux (depending on
font metrics) because the height of the green background applied to the
<div> does not necessarily match that of a background applied to a <span>
within it.
To avoid this, we can apply the green background to an inline (span)
element, not to the containing block (div), so that it always gets a
consistent height.
Updated•1 year ago
|
Assignee | ||
Comment 2•1 year ago
|
||
Fixing this also resolves a couple of text-transform test failures, because what was
failing was not the text-transform itself, but rather the trailing-ideographic-space
treatment.
Depends on D192394
Comment 5•1 year ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/81edb6c9b2f3
https://hg.mozilla.org/mozilla-central/rev/3ff9d913d60a
Updated•1 year ago
|
Assignee | ||
Comment 7•1 year ago
|
||
Re-opening, as the fix that landed here has just been backed out in https://hg.mozilla.org/mozilla-central/rev/877aa1219c43 to fix bug 1870973 and other reported regressions. The backout has also been uplifted to Fx122.
Comment 8•1 year ago
|
||
Backed out for 121.0.1 also
Description
•