Bug 1862249 - patch 2 - Recognize ideographic space (U+3000) as trimmable, so it can hang at end-of-line. r=layout-reviewers,emilio

Fixing this also resolves a couple of text-transform test failures, because what was
failing was not the text-transform itself, but rather the trailing-ideographic-space
treatment.

Differential Revision: https://phabricator.services.mozilla.com/D192396